# makebread

./: .gitignore  CHANGELOG.md  LICENSE  README.md  messages.mo  po4a.cfg  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml  transifex-sync.yml
.tx/: config
data/: io.github.yeager.makebread.desktop  io.github.yeager.makebread.metainfo.xml  seed_recipes.json
data/man/: makebread.1
debian/: changelog  copyright  postinst
makebread/: __init__.py  __main__.py
makebread/i18n/: __init__.py
makebread/models/: database.py  recipe.py
makebread/resources/locale/: README.md  makebread.pot
makebread/resources/locale/sv/LC_MESSAGES/: makebread.mo  makebread.po
makebread/ui/: application.py  main_window.py  print_recipe.py  recipe_editor.py  recipe_view.py  settings_dialog.py
makebread/utils/: importer.py  units.py
man/: makebread.1
po/: makebread.pot  nb.po  pl.po  ro.po  ru.po  sv.po  tr.po  uk.po  zh_CN.po
po/man/: makebread.1.pot
scripts/: build-deb.sh  build-rpm.sh  makebread.spec
