[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "makebread"
version = "0.4.3"
description = "A simple bread machine recipe manager"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Daniel Nylander", email = "daniel@danielnylander.se"},
]
dependencies = [
    "PyGObject>=3.42",
]

[project.scripts]
makebread = "makebread.__main__:main"

[project.gui-scripts]
makebread-gui = "makebread.__main__:main"

[tool.setuptools.packages.find]
include = ["makebread*"]
